--- a/container/activity_2.html
+++ b/container/activity_2.html
@@ -1,13 +1,29 @@
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>container</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </head>
-<body>
-    <div class="container bg-success text-white">
 
+<body>
+    <div class="container fluid bg-success text-white">
+        <h1>MY FIRST BOOTSTRAP PAGE</h1>
+        <p>we are here using container class.</p>
+        <p>the container class provides a refixed width </p>
+    </div>
+    <div class="container fluid bg-success text-white">
+        <h1>LANA DEL REY</h1>
+        <p>An american singer and songwriter</p>
+        <p>most popular album; born to die</p>
     </div>
 </body>
+
 </html>
