--- a/my hobby/my_hobby.html
+++ b/my hobby/my_hobby.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="my hobby bg-success text-white">
-        <h1>MY HOBBYS:</h1>
+        <h1>MY HOBBIES:</h1>
     </div>
     <div class="my hobby fluid bg-success text-white" >
         <h1>CHESS</h1>
