--- a/my hobby/my_hobby.html
+++ b/my hobby/my_hobby.html
@@ -14,14 +14,14 @@
     <div class="my hobby bg-success text-white">
         <h1>MY HOBBIES:</h1>
     </div>
-    <div class="my hobby fluid bg-success text-white" >
+    <div class="container fluid bg-success text-white" >
         <h1>CHESS</h1>
         <p>a board game of strategic skill for two players, played on a chequered board on which each playing piece is moved
         according to precise rules. The object is to put the opponent's king under a direct attack from which escape is
         impossible ( checkmate ).</p>
     <p>i mostly play it at night</p>
     </div>
-    <div class="my hobbyfluid bg-success text-white">
+    <div class="container fluid bg-success text-white">
         <h1>listening to music</h1>
         <p>listening to music listening lightens ones mode</p>
     </div>
