--- a/bootstrap carousel and scrollspy/scroolspy.html
+++ b/bootstrap carousel and scrollspy/scroolspy.html
@@ -37,9 +37,14 @@
     <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%"
         data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
         <h4 id="scrollspyHeading1">crime and punishment</h4>
-        <p>Crime and Punishment" – Fyodor Dostoevsky
-        A psychological novel about a young man, Raskolnikov, who commits murder and struggles with guilt, morality, and
-        redemption in 19th-century Russia.</p>
+        <p>A psychological novel exploring guilt, morality, and redemption, Crime and Punishment follows Rodion Raskolnikov, a poor
+        ex-student in St. Petersburg who justifies murdering a corrupt pawnbroker to prove his own superiority. However, his
+        conscience torments him, leading to paranoia and inner turmoil. As he struggles with his guilt, he encounters Sonia
+        Marmeladov, a kind-hearted woman who offers him a path to redemption.
+        
+        The novel delves into themes of justice, morality, alienation, and the consequences of one's actions, making it one of
+        Dostoevsky’s most profound and enduring works.</p>
+        
         <h4 id="scrollspyHeading2">pride and Prejudice</h4>
         <p>"Pride and Prejudice" – Jane Austen
         A classic romance novel that follows the witty and independent Elizabeth Bennet as she navigates issues of class,
